--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <section id="languages">
-    <div class="code" style="margin-top:100px;">
+    <div class="code" >
             <i class="	fas fa-code"></i>
     </div>
 
@@ -197,8 +197,10 @@
             Projects
         </h3>
     </div>
+        </center>
+        <center>
     <div data-aos="fade-up">
-        <div class="project1">
+        <div class="project1" >
             <h3>Company Marketing</h3>
             <img src="./inv.jpg">
             <p>This website is written in pure HTML and CSS and has some touch of JavaScript.
@@ -237,45 +239,67 @@
         </center>
     </section>
 
-      <!-- <div class="html2">
-      <div class="html1">
-              <img src="html.png" style="width:30px;height:30px;">
-          </div>
-      </div>
-      <h3 class="htmlH3">HTML - 9/10</h3>   
 
-    <div class="css2">
-    <div class="css1">
-    <img src="css.png" style="width:30px;height:30px;">
-    </div>
-    </div>
-    <h3 class="cssH3">CSS - 8.5/10</h3>   
-
-        <div class="js2">
-            <div class="js1">
-                    <img src="js.png" style="width:30px;height:30px;">
-                </div>
+    <section id="tools">
+        <div class="aboutme" style="margin-top:250px;">
+            <h3>
+            Fav tools
+        </h3>
+        </div>
+        <div class="code" >
+            <i class="fas fa-tools"></i>
+        </div>
+        <center>
+            <div data-aos="fade-up" style=" display:inline-block; margin-left:5%;margin-right:5%;">
+            <div class="tool1" style="border:3px solid blue;box-shadow:0px 0px 37px blue;">
+                <h3>
+                    Visual Studio Code
+                </h3>
+                <img src="./vsCode.png" >
+                <a href="https://code.visualstudio.com/download">Download Link</a>  
+                <i class="far fa-check-circle"></i>
             </div>
-            <h3 class="jsH3">JS - 3.5/10</h3>   
+            </div>
+
+            <div data-aos="fade-up" style=" display:inline-block; margin-left:5%;margin-right:5%;">
+            <div class="tool1" style="border:3px solid orange;box-shadow:0px 0px 37px orange">
+                <h3>
+                    XAMPP
+                </h3>
+                <img src="./xamp.jpg">
+                <a href="https://www.apachefriends.org/download.html">Download Link</a>
+                <i class="far fa-check-circle"></i>
+            </div>
+            </div>
+
+            <div data-aos="fade-up" style=" display:inline-block; margin-left:5%;margin-right:5%;">
+            <div class="tool1" style="border:3px solid skyblue;box-shadow:0px 0px 37px skyblue">
+            <h3>
+                Brackets
+            </h3>
+            <img src="./brackets.png" >
+            <a href="http://brackets.io/" >Download Link</a>
+            <i class="far fa-check-circle"></i>
+            </div>
+            </div>
+
+            <div data-aos="fade-up" style=" display:inline-block; margin-left:5%;margin-right:5%;">
+            <div class="tool1" style="border:3px solid purple;box-shadow:0px 0px 37px purple">
+                <h3>
+                    Visual Studio
+                </h3>
+                <img src="./vsc2.png" >
+                <a href="https://visualstudio.microsoft.com/downloads/">Download Link</a>
+                <i class="far fa-check-circle"></i>
+            </div>
+            </div>
 
 
-            <div class="php2">
-                <div class="php1">
-                        <img src="php.png" style="width:30px;height:30px;">
-                    </div>
-                </div>
-                <h3 class="phpH3">PHP - 8/10</h3>   
 
+        </center>
+    </section>
 
-
-    <div class="mvc2">
-    <div class="mvc1">
-    <img src="mvc.jpg" style="width:30px;height:30px;">
-    </div>
-    </div>
-    <h3 class="mvcH3">MVC - 5/10</h3>   
-     -->
-
+    <div style="margin-bottom:!00px;"></div>
 
 
 
