--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
     
+    <link rel = "icon" href = "./background.PNG" type = "image/x-icon" style="width:100%;height:100%;"> 
+   
     <title>Leotrim Ramadani-Portofolio</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
