--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
            <i class="fas fa-school"> "Mother Teresa University- Skopje"</i><br>
            <i class="far fa-comment"> In other words, I am pretty passionate on coding, learning new things,
                working with teammates, exchanging ideas, <br>helping others and trying to solve different kind of problems.<br>
-               It is worth to mention that I am very a fast learner and <br>I think <b>time</b> is the most valuable thing everyone has,
+               It is worth to mention that I am a very fast learner and <br>I think <b>time</b> is the most valuable thing everyone has,
                and I think that's why <b>bugs</b> make us so anxious! <i class="fas fa-grin-beam"></i>
 
            </i>
