--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="loader_bg">
 
 
-        <svg width="508" 
-        height="374" 
+        <svg width="340" 
+        height="324" 
         viewBox="0 0 508 374" 
         fill="none" 
         xmlns="http://www.w3.org/2000/svg"
@@ -137,7 +137,7 @@
     <div data-aos="fade-up">
     <div class="skills">
         <div class="skill">
-            <div class="skill-name" style="background:chocolate;width:45px;text-align:center">HTML</div>
+            <div class="skill-name" style="background:chocolate;width:45px;padding:3px;text-align:center">HTML</div>
             <div class="skill-bar">
                 <div class="skill-per" per="85" style="background:chocolate"></div>
             </div>
@@ -148,7 +148,7 @@
     <div data-aos="fade-up">
     <div class="skills">
         <div class="skill">
-            <div class="skill-name"  style="background:cornflowerblue;width:40px;text-align:center">CSS</div>
+            <div class="skill-name"  style="background:cornflowerblue;width:40px;padding:3px;text-align:center">CSS</div>
             <div class="skill-bar">
                 <div class="skill-per" per="80" style="background:cornflowerblue"></div>
             </div>
@@ -159,7 +159,7 @@
     <div data-aos="fade-up">
     <div class="skills">
         <div class="skill">
-            <div class="skill-name"  style="background:greenyellow;width:100px;text-align:center">JAVASCRIPT</div>
+            <div class="skill-name"  style="background:greenyellow;width:120px;padding:3px;text-align:center">JAVASCRIPT</div>
             <div class="skill-bar">
                 <div class="skill-per" per="30" style="background:greenyellow;"></div>
             </div>
@@ -170,7 +170,7 @@
     <div data-aos="fade-up">
     <div class="skills">
         <div class="skill">
-            <div class="skill-name"  style="background:crimson;width:40px;text-align:center">PHP</div>
+            <div class="skill-name"  style="background:crimson;width:40px;padding:3px;text-align:center">PHP</div>
             <div class="skill-bar">
                 <div class="skill-per" per="75" style="background:crimson"></div>
             </div>
@@ -181,7 +181,7 @@
     <div data-aos="fade-up">
     <div class="skills">
         <div class="skill">
-            <div class="skill-name"  style="background:hotpink;width:125px;text-align:center">ASP.NET/MVC</div>
+            <div class="skill-name"  style="background:hotpink;width:140px;padding:3px;text-align:center">ASP.NET/MVC</div>
             <div class="skill-bar">
                 <div class="skill-per" per="35" style="background:hotpink"></div>
             </div>
@@ -202,7 +202,7 @@
         <div data-aos="fade-up">
     <div class="skills">
         <div class="skill">
-            <div class="skill-name"  style="background:midnightblue;width:90px;text-align:center">SQL/MySQL</div>
+            <div class="skill-name"  style="background:midnightblue;width:110px;padding:3px;text-align:center">SQL/MySQL</div>
             <div class="skill-bar">
                 <div class="skill-per" per="65" style="background:midnightblue"></div>
             </div>
@@ -368,9 +368,9 @@
         <div data-aos="fade-up">
         <div class="email">
             <form action="mailto:leotrimramadani5@gmail.com" method="post" enctype="text/plain">
-                <input type="text" name="name" required placeholder="Name: "><br><br>
-                <input type="text" name="mail" required placeholder="E-mail: "><br><br>
-                <input type="text" name="comment" required placeholder="Comment: "><br><br>
+                <input type="text" name="name" required placeholder="Name: " style="box-shadow:0px 0px 10px white;"><br><br>
+                <input type="text" name="mail" required placeholder="E-mail: " style="box-shadow:0px 0px 10px white;"><br><br>
+                <input type="text" name="comment" required placeholder="Comment: " style="box-shadow:0px 0px 10px white;"><br><br>
                 <input type="submit" value="Send">
                 <input type="reset" value="Reset">
                 </form>
@@ -382,7 +382,7 @@
  <div class="footer">
      <center>
      <img src="background.PNG">
-    <p>&#9400; All rights reserved, 2021 </p>
+    <p style="text-shadow:0px 0px 10px red">&#9400; All rights reserved, 2021 </p>
     </center>
 </div>
 
