--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <body>
     <div class="loader_bg">
 
-
         <svg width="340" 
         height="324" 
         viewBox="0 0 508 374" 
@@ -96,8 +95,8 @@
     </div>
         <center>
             
-        <div class="container2" style="margin:auto;">
-        <img src="./me.jpg">
+        <div class="container2" style="margin-top:50px;">
+        <img src="./me3.jpg">
         <div class="container3">
             <i class='fas fa-user'> 21 years old</i> <br>
            <i class="fas fa-thumbtack"> Kumanovo, North Macedonia</i><br>
@@ -385,11 +384,11 @@
         <div data-aos="fade-up">
         <div class="email" >
             <form action="mailto:leotrimramadani5@gmail.com" method="post" enctype="text/plain">
-                <input type="text" name="name" required placeholder="Name: " style="box-shadow:0px 0px 10px white;"><br><br>
-                <input type="text" name="mail" required placeholder="E-mail: " style="box-shadow:0px 0px 10px white;"><br><br>
-                <input type="text" name="comment" required placeholder="Comment: " style="box-shadow:0px 0px 10px white;"><br><br>
-                <input type="submit" value="Send" style="box-shadow:0px 0px 10px white;">
-                <input type="reset" value="Reset" style="box-shadow:0px 0px 10px white;">
+                <input type="text" name="name" required placeholder="Name: " style="box-shadow:0px 0px 10px skyblue;"><br><br>
+                <input type="text" name="mail" required placeholder="E-mail: " style="box-shadow:0px 0px 10px skyblue;"><br><br>
+                <input type="text" name="comment" required placeholder="Comment: " style="box-shadow:0px 0px 10px skyblue;"><br><br>
+                <input type="submit" value="Send" style="box-shadow:0px 0px 10px skyblue;">
+                <input type="reset" value="Reset" style="box-shadow:0px 0px 10px skyblue;">
                 </form>
         </div>
     </div>
@@ -397,9 +396,10 @@
 
 
  <div class="footer">
+    <Br>
      <center>
      <img src="background.PNG">
-    <p style="text-shadow:0px 0px 10px red">&#9400; All rights reserved, 2021 </p>
+    <p style="text-shadow:0px 0px 10px skyblue">&#9400; All rights reserved, 2021 </p>
     </center>
 </div>
 
