--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
         <center>
             
-        <div class="container2" style="margin-top:50px;">
+        <div class="container2" style="margin:auto">
         <img src="./me3.jpg">
         <div class="container3">
             <i class='fas fa-user'> 21 years old</i> <br>
